--- a/index.html
+++ b/index.html
@@ -142,11 +142,11 @@
                 <div>
                     <label for="activityLevel" class="block text-sm font-medium text-gray-700 mb-1">Aktivitätslevel</label>
                     <select id="activityLevel" class="w-full p-2 border border-gray-300 rounded-md focus:ring-blue-500 focus:border-blue-500">
-                        <option value="1.2">Wenig aktiv (kaum/keine Bewegung)</option>
-                        <option value="1.375">Leicht aktiv (leichter Sport 1-3 Tage/Woche)</option>
-                        <option value="1.55">Moderat aktiv (moderater Sport 3-5 Tage/Woche)</option>
-                        <option value="1.725">Sehr aktiv (intensiver Sport 6-7 Tage/Woche)</option>
-                        <option value="1.9">Extrem aktiv (sehr intensiver Sport/körperliche Arbeit)</option>
+                        <option value="1.2">Wenig aktiv</option>
+                        <option value="1.375">Leicht aktiv</option>
+                        <option value="1.55">Moderat aktiv</option>
+                        <option value="1.725">Sehr aktiv</option>
+                        <option value="1.9">Extrem aktiv</option>
                     </select>
                 </div>
                 <div>
