--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kalorien-Tracker App</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" xintegrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSC鉴定==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSC鉴定==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 
     <link rel="manifest" href="manifest.json">
@@ -142,11 +142,11 @@
                 <div>
                     <label for="activityLevel" class="block text-sm font-medium text-gray-700 mb-1">Aktivitätslevel</label>
                     <select id="activityLevel" class="w-full p-2 border border-gray-300 rounded-md focus:ring-blue-500 focus:border-blue-500">
-                        <option value="1.2">Wenig aktiv</option>
-                        <option value="1.375">Leicht aktiv</option>
-                        <option value="1.55">Moderat aktiv</option>
-                        <option value="1.725">Sehr aktiv</option>
-                        <option value="1.9">Extrem aktiv</option>
+                        <option value="1.2">Wenig aktiv (kaum/keine Bewegung)</option>
+                        <option value="1.375">Leicht aktiv (leichter Sport 1-3 Tage/Woche)</option>
+                        <option value="1.55">Moderat aktiv (moderater Sport 3-5 Tage/Woche)</option>
+                        <option value="1.725">Sehr aktiv (intensiver Sport 6-7 Tage/Woche)</option>
+                        <option value="1.9">Extrem aktiv (sehr intensiver Sport/körperliche Arbeit)</option>
                     </select>
                 </div>
                 <div>
@@ -297,16 +297,16 @@
         <div class="bg-white rounded-xl shadow-md p-6 mb-6 w-full">
             <h2 class="font-semibold text-xl mt-6 mb-2" id="dailySummaryDate"></h2>
             
-            <div class="progress-circle-container mb-4 mx-auto" /* Removed inline style here */>
+            <div class="progress-circle-container mb-4 mx-auto">
                 <svg viewBox="0 0 180 180">
                     <circle cx="90" cy="90" r="80" fill="none" stroke="#E5E7EB" stroke-width="15"></circle>
 
                     <circle id="dailyCarbsArc" cx="90" cy="90" r="80" fill="none" stroke="#9FB8DF" stroke-width="15" /* Blue */
-                            stroke-dasharray="0 502.65" stroke-dashoffset="0" transform="rotate(-90 90 90)"></circle>
+                            stroke-dasharray="0 502.65" stroke-dashoffset="0"></circle>
                     <circle id="dailyProteinArc" cx="90" cy="90" r="80" fill="none" stroke="#D4EAE4" stroke-width="15" /* Green */
-                            stroke-dasharray="0 502.65" stroke-dashoffset="0" transform="rotate(-90 90 90)"></circle>
+                            stroke-dasharray="0 502.65" stroke-dashoffset="0"></circle>
                     <circle id="dailyFatArc" cx="90" cy="90" r="80" fill="none" stroke="#DED79F" stroke-width="15" /* Yellow */
-                            stroke-dasharray="0 502.65" stroke-dashoffset="0" transform="rotate(-90 90 90)"></circle>
+                            stroke-dasharray="0 502.65" stroke-dashoffset="0"></circle>
                 </svg>
                 <div class="text-overlay">
                     <div class="label">Verbraucht</div>
@@ -315,7 +315,7 @@
                 </div>
             </div>
 
-            <div class="flex flex-wrap justify-center gap-x-4 gap-y-2 text-sm w-full mt-4">
+            <div class="flex flex-wrap legend gap-x-4 gap-y-2 text-sm w-full mt-4">
                 <div class="flex items-center">
                     <span class="w-3 h-3 rounded-full legend-color-blue mr-2"></span>
                     <span>Kohlenhydrate</span>
